test/log/store/vsstcb7_v_u32.txt
vsstcb7_v_u32.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb7_v_u32.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb7_v_u32.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vsstcb7_v_u32.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vsstcb7_v_u32.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vsstcb7_v_u32.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vsstcb7_v_u32.c:29:6: warning: no previous prototype for 'vsstcb7_v_u32_golden' [-Wmissing-prototypes]
   29 | void vsstcb7_v_u32_golden(uint32_t base[],int32_t *index,uint32_t *value,void *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vsstcb7_v_u32.c: In function 'vsstcb7_v_u32_golden':
vsstcb7_v_u32.c:31:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   31 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vsstcb7_v_u32.c:31:1: note: each undeclared identifier is reported only once for each function it appears in
vsstcb7_v_u32.c:31:9: error: expected ';' before 'Line'
   31 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vsstcb7_v_u32.c:29:36: warning: unused parameter 'base' [-Wunused-parameter]
   29 | void vsstcb7_v_u32_golden(uint32_t base[],int32_t *index,uint32_t *value,void *exp_result) {
      |                           ~~~~~~~~~^~~~~~
vsstcb7_v_u32.c:29:52: warning: unused parameter 'index' [-Wunused-parameter]
   29 | void vsstcb7_v_u32_golden(uint32_t base[],int32_t *index,uint32_t *value,void *exp_result) {
      |                                           ~~~~~~~~~^~~~~
vsstcb7_v_u32.c:29:68: warning: unused parameter 'value' [-Wunused-parameter]
   29 | void vsstcb7_v_u32_golden(uint32_t base[],int32_t *index,uint32_t *value,void *exp_result) {
      |                                                          ~~~~~~~~~~^~~~~
vsstcb7_v_u32.c:29:80: warning: unused parameter 'exp_result' [-Wunused-parameter]
   29 | void vsstcb7_v_u32_golden(uint32_t base[],int32_t *index,uint32_t *value,void *exp_result) {
      |                                                                          ~~~~~~^~~~~~~~~~
vsstcb7_v_u32.c: In function 'main':
vsstcb7_v_u32.c:22:15: error: subscripted value is neither array nor pointer nor vector
   22 |              a[i] = random(threshold); \
      |               ^
vsstcb7_v_u32.c:47:5: note: in expansion of macro 'data_init'
   47 |     data_init(value, exp_value, 16*7, 0xffffffff);
      |     ^~~~~~~~~
vsstcb7_v_u32.c:23:22: error: subscripted value is neither array nor pointer nor vector
   23 |              b[i] = a[i]; \
      |                      ^
vsstcb7_v_u32.c:47:5: note: in expansion of macro 'data_init'
   47 |     data_init(value, exp_value, 16*7, 0xffffffff);
      |     ^~~~~~~~~
vsstcb7_v_u32.c:56:55: error: 'exp_result' undeclared (first use in this function)
   56 |     vsstcb7_v_u32_golden(exp_base,exp_index,exp_value,exp_result);
      |                                                       ^~~~~~~~~~
vsstcb7_v_u32.c:62:9: error: 'i' undeclared (first use in this function)
   62 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb7_v_u32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb7_v_u32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb7_v_u32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb7_v_u32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed